# textgpt

./: .gitignore  Cargo.toml  README.md
src/: chatbot.rs  main.rs
