[package]
name = "textgpt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = "0.4.39"
openai_api_rust = "0.1.9"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate", "chrono"] }
tokio = { version = "1.43.0", features = ["full"]}
