[package]
name = "textgpt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = "0.4.39"
futures = "0.3.31"
log = "0.4.25"
openai = "1.0.0-alpha.19"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate", "chrono"] }
tokio = { version = "1.43.0", features = ["full"]}
